[package]
name = "map_tile"
version = "0.1.0"
edition = "2021"
authors = ["ninleizhang"]
description = "tool for map tile"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.25.0"
geo-types = "0.7.9"
wkt = "0.10.3"